Adição de bootstrap e readme

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,36 +4,56 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loja</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <title>Pets loja</title>
   </head>
+  <nav class="navbar navbar-light bg-light mb-4">
+    <a class="navbar-brand" href="/">Pets Loja</a>
+  </nav>
+
   <body>
-    <h1>Pet Loja</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Nome</th>
-          <th>Descrição</th>
-          <th>Preço</th>
-          <th>Quantidade</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Caixa de transporte</td>
-          <td>Vermelha - Tamanho médio</td>
-          <td>R$:29,90</td>
-          <td>1</td>
-        </tr>
-        <tr>
-          <td>Arranhador</td>
-          <td>Arranhador de Rampa</td>
-          <td>R$: 59,42</td>
-          <td>1</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="container">
+      <section class="card">
+        <div>
+          <table class="table table-striped table-hover mb-0">
+            <thead>
+              <tr>
+                <th>Nome</th>
+                <th>Descrição</th>
+                <th>Preço</th>
+                <th>Quantidade</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Caixa de transporte</td>
+                <td>Vermelha - Tamanho médio</td>
+                <td>R$:29,90</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td>Arranhador</td>
+                <td>Arranhador de Rampa</td>
+                <td>R$: 59,42</td>
+                <td>1</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
 {{end}}
