--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,9 @@
           </table>
         </div>
       </section>
+      <div class="card-footer">
+        <a href="/new" class="btn btn-primary mb-2">Criar novo produto</a>
+      </div>
     </div>
   </body>
 </html>
