--- a/templates/new.html
+++ b/templates/new.html
@@ -10,10 +10,10 @@
         crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <title>Alura loja</title>
+    <title>Pet loja</title>
 </head>
 <nav class="navbar navbar-light bg-light mb-4">
-    <a class="navbar-brand" href="/">Alura Loja</a>
+    <a class="navbar-brand" href="/">Pet Loja</a>
 </nav>
 <div class="container">
 
