verificando com js

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,9 @@
                 <td>{{.Preco}}</td>
                 <td>{{.Quantidade}}</td>
                 <td>
-                  <a href="/delete?id={{.Id}}" class="btn btn-danger">Deletar</a>
+                  <button onclick="onDelete('{{.Id}}')" class="btn btn-danger">
+                    Deletar
+                  </button>
                 </td>
               </tr>
               {{end}}
@@ -57,5 +59,14 @@
       </div>
     </div>
   </body>
+
+  <script>
+    function onDelete(id) {
+      let resposta = confirm('Tem certeza que deseja deletar este produto?')
+      if (resposta) {
+        window.location = '/delete?id=' + id
+      }
+    }
+  </script>
 </html>
 {{end}}
