--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,7 +5,6 @@
 {{template "_menu"}}
 
 <div class="container">
-
     <body>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
@@ -13,12 +12,13 @@
                 <p class="lead">Insira os dados para atualizar</p>
             </div>
         </div>
-        <form method="POST" action="insert">
+        <form method="POST" action="update">
+            <input type="hidden" name="id" value="{{.Id}}">
             <div class="row">
                 <div class="col-sm-8">
                     <div class="form-group">
                         <label for="nome">Nome:</label>
-                        <input type="text" name="nome" class="form-control">
+                        <input type="text" name="nome" class="form-control" value="{{.Nome}}">
                     </div>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                 <div class="col-sm-8">
                     <div class="form-group">
                         <label for="descricao">Descrição:</label>
-                        <input type="text" name="descricao" class="form-control">
+                        <input type="text" name="descricao" class="form-control" value="{{.Descricao}}">
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                 <div class="col-sm-2">
                     <div class="form-group">
                         <label for="preco">Preço:</label>
-                        <input type="number" name="preco" class="form-control" step="0.01">
+                        <input type="number" name="preco" class="form-control" step="0.01" value="{{.Preco}}">
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 <div class="col-sm-2">
                     <div class="form-group">
                         <label for="quantidade">Quantidade:</label>
-                        <input type="number" name="quantidade" class="form-control">
+                        <input type="number" name="quantidade" class="form-control" value="{{.Quantidade}}">
                     </div>
                 </div>
             </div>
@@ -51,10 +51,7 @@
             <a class="btn btn-info" href="/">Voltar</a>
         </form>
     </body>
-
-</html>
 </div>
-</body>
 </html>
 
 {{end}}
